# torch_camera_design

./: .cursorrules  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/torch_camera_design/: __init__.py  _version.py
src/torch_camera_design/evaluation/: __init__.py  metrics.py  report.py
src/torch_camera_design/losses/: __init__.py  l2.py  luther.py  vora.py
tests/: test_import.py
