[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "torch_camera_design"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "", email = "" },
]
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]

[project.urls]
Homepage = ""
Repository = ""
Issues = ""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/torch_camera_design"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/torch_camera_design",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
