[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torch_camera_design"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
authors = [" "]
packages = [
  { include = "torch_camera_design", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
torch = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
